# Molybdenum

./: .gitignore  BitStuff.h  CMakeLists.txt  Constants.h  MagicBitboards.h  Makefile  Move.h  Movegen.h  PSQT.h  Perft.h  Position.cpp  Position.h  README.md  UCI.cpp  Utility.h  eval.cpp  eval.h  main.cpp  search.cpp  search.h  timemanagement.h
.github/workflows/: build.yaml  buildWindows.yaml
src/: BitStuff.h  Constants.h  MagicBitboards.h  Move.h  Movegen.cpp  Movegen.h  Movepicker.h  Movepickernew.h  PSQT.h  Perft.h  Position.cpp  Position.h  Transpositiontable.cpp  Transpositiontable.h  UCI.cpp  UCI.h  UCIOptions.cpp  UCIOptions.h  Utility.h  batchnorm.h  bench.h  bookgen.cpp  bookgen.h  convolution.h  eval.cpp  eval.h  history.h  main.cpp  mcts.cpp  mcts.h  nnue.cpp  nnue.h  policy.cpp  policy.h  search.cpp  search.h  searchUtil.h  simd.h  thread.cpp  thread.h  (+9 more)
src/Datagen/: Datagen.cpp  Datagen.h  Newgen.cpp  Newgen.h  datagen.cpp  datagen.h  test.py
src/Nets/: 03135F4D_iteration_241.nnue  03135F4D_iteration_3343.nnue  20240213.nnue  20240215.nnue  20240215_0.5_30k.nnue  20240323.nnue  20240323_128.nnue  20240324.nnue  20240326.nnue  20240327.nnue  20240330_sb10.nnue  20240330_t4_ep40.nnue  20240411.nnue  20240601.nnue  20240717_8  20240717_quant_2  20240717_quant_4  20240718_quant_4  5kAllFixed-epoch40.nnue  AkimboSqB.nnue  WDLQTargetMSE.nnue  diff.nnue  emptyNet_iteration_1.nnue  emptyNet_iteration_109.nnue  emptyNet_iteration_139.nnue  emptyNet_iteration_174.nnue  float.nnue  foo.txt  he2s22p1.nnue  k64.nnue  kr4d105s1.nnue  libnetquantized5  moarLayers_quantized_6  moly_18022025.nnue  moly_20240418.nnue  moly_20240418_OCB.nnue  moly_20240501.nnue  moly_20240502.nnue  moly_20240508.nnue  moly_20240517.nnue  (+19 more)
src/Nets/ar3d64s2/: ar3d64s2.nnue  info.md
src/Nets/netBulletTest3-epoch40/: Info.md
src/Nets/xe4f145d106s1/: xe4f145d106s1.nnue
src/Tuner/: tuner.cpp  tuner.h
src/incbin/: incbin.h
src/util/: preprocess.cpp  vfutils.cpp  vfutils.h  viriformat.h
